--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -50,14 +50,14 @@
 
 		<link rel="stylesheet" href="/resources/plugins/cssmenu-3/styles.css">
 		<script src="/resources/plugins/cssmenu-3/script.js"></script>
-		
+
 		<!-- Arama Kutucuğu-->
 
 		<link href="/resources/css/searchbox.css" rel="stylesheet"
 		type="text/css" />
 
 		<script src="/resources/js/modernizer.js"></script>
-		
+
 		<!-- Smart Menus plugin -->
 
 		<!-- jQuery import -->
@@ -85,22 +85,24 @@
 				smartmenus('#main-menu').smartmenus();
 			});
 		</script>
-		
-		
+
+		<!-- Fırsatlar Paneli-->
+		<link href="/resources/plugins/firsatlarpaneli/style.css"
+
+		<script src="/resources/plugins/firsatlarpaneli/script.js"
+		type="text/javascript"></script>
 
 		<!-- end of plugins  -->
 
 		<style>
-		
-		body {
-			background-color:#F0F7F7;
-			
-		}
+			body {
+				background-color: #F0F7F7;
+			}
 			@media screen and (min-width: 1200px) {
 				body {
 					padding-left: 50px;
-				padding-right: 50px;
-				padding-top:30px;
+					padding-right: 50px;
+					padding-top: 30px;
 				}
 			}
 
@@ -149,6 +151,61 @@
 
 				<%= render "smartmenus" %>
 
+			</div>
+
+			<div class="container">
+				<div class="row">
+					<div class="btn-group btn-group-justified">
+						<div class="btn-group">
+							<button type="button" class="btn btn-nav">
+								<span class="glyphicon glyphicon-folder-close"></span>
+								<p>
+									Shopping
+								</p>
+							</button>
+						</div>
+						<div class="btn-group">
+							<button type="button" class="btn btn-nav">
+								<span class="glyphicon glyphicon-calendar"></span>
+								<p>
+									Calendar
+								</p>
+							</button>
+						</div>
+						<div class="btn-group">
+							<button type="button" class="btn btn-nav">
+								<span class="glyphicon glyphicon-globe"></span>
+								<p>
+									Network
+								</p>
+							</button>
+						</div>
+						<div class="btn-group">
+							<button type="button" class="btn btn-nav">
+								<span class="glyphicon glyphicon-leaf"></span>
+								<p>
+									Ecology
+								</p>
+							</button>
+						</div>
+						<div class="btn-group">
+							<button type="button" class="btn btn-nav">
+								<span class="glyphicon glyphicon-time"></span>
+								<p>
+									Statistics
+								</p>
+							</button>
+						</div>
+						<div class="btn-group">
+							<button type="button" class="btn btn-nav">
+								<span class="glyphicon glyphicon-bell"></span>
+								<p>
+									Events
+								</p>
+							</button>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="row"
