--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -1,6 +1,6 @@
 <div class="smartmenus" style="margin-bottom: 2%">
 
-	<div style="">
+	<div style="z-index: 3;">
 
 		<ul id="main-menu" class="sm sm-blue" style="border-radius: 0">
 			<li><a href="/">Anasayfa</a></li>
