--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -87,10 +87,9 @@
 		</script>
 
 		<!-- Fırsatlar Paneli-->
-		<link href="/resources/plugins/firsatlarpaneli/style.css"
+		<link href="/resources/plugins/firsatlarpaneli/style.css" rel="stylesheet">
 
-		<script src="/resources/plugins/firsatlarpaneli/script.js"
-		type="text/javascript"></script>
+		
 
 		<!-- end of plugins  -->
 
@@ -152,60 +151,86 @@
 				<%= render "smartmenus" %>
 
 			</div>
+			
+			<script>
+				var activeEl = <%= @active %>;
+				$(function() {
+				    var items = $('.btn-nav');
+				    $( items[activeEl] ).addClass('active');
+				    $( ".btn-nav" ).click(function() {
+				        $( items[activeEl] ).removeClass('active');
+				        $( this ).addClass('active');
+				        activeEl = $( ".btn-nav" ).index( this );
+				    });
+				});
+			</script>
 
-			<div class="container">
-				<div class="row">
-					<div class="btn-group btn-group-justified">
+
+			<div class="row">
+			
+				
+					<div  class="btn-group btn-group-justified">
 						<div class="btn-group">
-							<button type="button" class="btn btn-nav">
+							<button onclick="window.location='/firsatlar?acililanlar=1'"  type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-folder-close"></span>
 								<p>
-									Shopping
+									<a>Acil İlanlar </a>
 								</p>
 							</button>
 						</div>
 						<div class="btn-group">
-							<button type="button" class="btn btn-nav">
+							<button onclick="window.location='/firsatlar?gununfirsatlari=1'" type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-calendar"></span>
 								<p>
-									Calendar
+									Günün Fırsatları
 								</p>
 							</button>
 						</div>
 						<div class="btn-group">
-							<button type="button" class="btn btn-nav">
+							<button onclick="window.location='/firsatlar?ensonilanlar=1'" type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-globe"></span>
 								<p>
-									Network
+									En Son İlanlar
 								</p>
 							</button>
 						</div>
 						<div class="btn-group">
-							<button type="button" class="btn btn-nav">
+							<button onclick="window.location='/firsatlar?enpopulerilanlar=1'" type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-leaf"></span>
 								<p>
-									Ecology
+									En Popüler İlanlar
 								</p>
 							</button>
 						</div>
 						<div class="btn-group">
-							<button type="button" class="btn btn-nav">
+							<button onclick="window.location='/firsatlar?fiyatidusenler=1'" type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-time"></span>
 								<p>
-									Statistics
+									Fiyatı Düşenler
 								</p>
 							</button>
 						</div>
 						<div class="btn-group">
-							<button type="button" class="btn btn-nav">
+							<button onclick="window.location='/firsatlar?enguvenilirsaticilar=1'" type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-bell"></span>
 								<p>
-									Events
+									En Güvenilir Satıcılar
 								</p>
 							</button>
 						</div>
+						
+						<div class="btn-group">
+							<button onclick="window.location='/firsatlar?enyakindakisaticilar=1'" type="button" class="btn btn-nav">
+								<span class="glyphicon glyphicon-bell"></span>
+								<p>
+									En Yakındaki Satıcılar
+								</p>
+							</button>
+						</div>
+						
+						
 					</div>
-				</div>
+				
 			</div>
 
 			<div class="row"
