--- a/public/resources/plugins/firsatlarpaneli/style.css
+++ b/public/resources/plugins/firsatlarpaneli/style.css
@@ -11,11 +11,9 @@ Inspired by http://dribbble.com/shots/890759-Ui-Kit-Metro/attachments/97174
   /* Firefox 29+, IE 8+, Chrome 10+, Safari 5.1+, Opera 9.5+, iOS 5+, Opera Mini Anything, Blackberry 10+, Android 4+ */
   box-sizing: border-box;
 }
-body {
-    background: url(http://habrastorage.org/files/90a/010/3e8/90a0103e8ec749c4843ffdd8697b10e2.jpg);
-    text-align: center;
-    padding-top: 40px;
-}
+
+
+
 .btn-nav {
     background-color: #fff;
     border: 1px solid #e0e1db;
@@ -24,16 +22,16 @@ body {
     box-sizing: border-box;         /* Opera/IE 8+ */
 }
 .btn-nav:hover {
-    color: #e92d00;
+    color: #05B7F2;
     cursor: pointer;
     -webkit-transition: color 1s; /* For Safari 3.1 to 6.0 */
     transition: color 1s;
 }
 .btn-nav.active {
-    color: #e92d00;
+    color: #05B7F2;
     padding: 2px;
-	border-top: 6px solid #e92d00;
-	border-bottom: 6px solid #e92d00;
+	border-top: 6px solid #05B7F2;
+	border-bottom: 6px solid #05B7F2;
     border-left: 0;
     border-right: 0;
     box-sizing:border-box;
@@ -52,7 +50,7 @@ body {
 	position: absolute;
 	border-style: solid;
 	border-width: 6px 6px 0;
-	border-color: #e92d00 transparent;
+	border-color: #05B7F2 transparent;
 	display: block;
 	width: 0;
 	z-index: 1;
