--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -220,32 +220,32 @@
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?acililanlar=1">Acil İlanlar </a>
+							<a href="/firsatlar?acililanlar=1">Acil İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?gununfirsatlari=1">Günün Fırsatları </a>
+							<a href="/firsatlar?gununfirsatlari=1">Günün Fırsatları </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?ensonilanlar=1">En Son İlanlar </a>
+							<a href="/firsatlar?ensonilanlar=1">En Son İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?enpopulerilanlar=1">En Popüler Olanlar </a>
+							<a href="/firsatlar?enpopulerilanlar=1">En Popüler Olanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?fiyatidusenler=1">Fiyatı Düşenler </a>
+							<a href="/firsatlar?fiyatidusenler=1">Fiyatı Düşenler </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?enguvenilirsaticilar=1">En Güvenilir Satıcılar</a>
+							<a href="/firsatlar?enguvenilirsaticilar=1">En Güvenilir Satıcılar</a>
 
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
+							<a href="/firsatlar?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
 
 						</div>
 
