--- a/app/views/advert/ikinciel.html.erb
+++ b/app/views/advert/ikinciel.html.erb
@@ -160,7 +160,7 @@
 										<li data-thumb="<%= image_path image.imagefile(:original) %>">
 											<div class="thumb-image">
 												
-												<%= image_tag image.imagefile(:original), 'data-imagezoom' => 'true', :class => 'img-responsive', :style => 'width:600px;;height:800px; '%>
+												<%= image_tag image.imagefile(:original), 'data-imagezoom' => 'true', :class => 'img-responsive'%>
 											</div>
 										</li>
 										
