--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -132,7 +132,7 @@
 
 				<!-- Login Starts Here -->
 
-				<tags:loginContainer />
+				<%= render "loginContainer" %>
 
 				<!-- Login Ends Here -->
 
@@ -195,17 +195,27 @@
 						<label class = "col-sm-2 control-label">İlan Adı</label>
 
 						<div class = "col-sm-10">
-							<%= t.text_field :name, class:"form-control" %>
+							<%= t.text_field :name, class:"form-control", :maxlength => 60 %>
 						</div>
+					</div>
+					
+					<div class = 'col-xs-12 label label-danger form-group'>
+						Lüften İlan Adı Giriniz
 					</div>
 
 					<div class = "row form-group">
 						<label class = "col-sm-2 control-label">Fiyat</label>
 
 						<div class = "col-sm-10">
-							<%= t.text_field :price, class:"form-control" %>
+							<%= t.text_field :price, class:"form-control", :maxlength => 7 %>
 						</div>
 					</div>
+					
+					
+					<div class = 'col-xs-12 label label-danger form-group'>
+						Geçersiz Fiyat Değeri
+					</div>
+				
 
 					<div class = "row form-group">
 						<label class = "col-sm-2 control-label">Ürün Rengi</label>
@@ -222,6 +232,10 @@
 						<div class = "col-sm-10">
 							<%= field.text_field :brand ,class:"form-control"%>
 						</div>
+					</div>
+					
+					<div class = 'col-xs-12 label label-danger form-group'>
+						Lütfen Marka Giriniz
 					</div>
 
 					<div class = "row form-group">
@@ -247,9 +261,19 @@
 							<%= t.text_area :explication, class:"form-control" %>
 						</div>
 					</div>
+					
+					<div class = 'col-xs-12 label label-danger form-group'>
+						Lütfen Açıklama Giriniz
+					</div>
+					
+					<br>
 
 					<div class="row">
 						<%= file_field_tag 'images[]', :type => :file, :multiple => true, :class => 'file_image'%>
+					</div>
+					
+					<div class = 'col-xs-12 label label-danger form-group'>
+						Lütfen En Az Bir Resim Ekleyiniz
 					</div>
 					
 					
