--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -199,7 +199,7 @@
 						</div>
 					</div>
 					
-					<div class = 'col-xs-12 label label-danger form-group'>
+					<div style="display:none;" class = 'col-xs-12 label label-danger form-group'>
 						Lüften İlan Adı Giriniz
 					</div>
 
@@ -212,7 +212,7 @@
 					</div>
 					
 					
-					<div class = 'col-xs-12 label label-danger form-group'>
+					<div style="display:none;"class = 'col-xs-12 label label-danger form-group'>
 						Geçersiz Fiyat Değeri
 					</div>
 				
@@ -234,7 +234,7 @@
 						</div>
 					</div>
 					
-					<div class = 'col-xs-12 label label-danger form-group'>
+					<div style="display:none;"class = 'col-xs-12 label label-danger form-group'>
 						Lütfen Marka Giriniz
 					</div>
 
@@ -262,7 +262,7 @@
 						</div>
 					</div>
 					
-					<div class = 'col-xs-12 label label-danger form-group'>
+					<div style="display:none;"class = 'col-xs-12 label label-danger form-group'>
 						Lütfen Açıklama Giriniz
 					</div>
 					
@@ -272,7 +272,7 @@
 						<%= file_field_tag 'images[]', :type => :file, :multiple => true, :class => 'file_image'%>
 					</div>
 					
-					<div class = 'col-xs-12 label label-danger form-group'>
+					<div style="display:none;"class = 'col-xs-12 label label-danger form-group'>
 						Lütfen En Az Bir Resim Ekleyiniz
 					</div>
 					
