--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -223,9 +223,12 @@
 
 					</div>
 
-					<div class="col-lg-8 col-md-8">
+					<div style="padding-left:50px;margin-top: 20px;" class="col-lg-8 col-md-8">
 
-						<img  src="/resources/images/cat-demo.jpg">
+						-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.<br><br>
+						
+						-Sitemizin işleyişiyle ilgili bilgi mi almak istiyorsunuz? <a href="">Buraya</a> tıklayın.<br><br>
+						&nbsp;Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın.
 
 					</div>
 
