--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1152,58 +1152,35 @@
 									<% end %>
 								</ul>
 								<ul>
+									<% @ensonevarkadasi.each do |adv| %>
 									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/5.jpg" alt="img05"> <h4>Belts</h4> </a>
+										<a href="/evarkadasi/<%= adv.name.parameterize + '-' + adv.id.to_s %>"> 
+										<%= image_tag adv.images[0].imagefile(:small) %><br /> <h4><%= adv.name %></h4> </a>
 									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/6.jpg" alt="img06"> <h4>Hats &amp; Caps</h4> </a>
-									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/7.jpg" alt="img07"> <h4>Sunglasses</h4> </a>
-									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/8.jpg" alt="img08"> <h4>Scarves</h4> </a>
-									</li>
+
+									<% end %>
 								</ul>
 								<ul>
+									<% @ensondersnotu.each do |adv| %>
 									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/9.jpg" alt="img09"> <h4>Casual</h4> </a>
+										<a href="/dersnotu/<%= adv.name.parameterize + '-' + adv.id.to_s %>"> 
+										<%= image_tag adv.images[0].imagefile(:small) %><br /> <h4><%= adv.name %></h4> </a>
 									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/10.jpg" alt="img10"> <h4>Luxury</h4> </a>
-									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/11.jpg" alt="img11"> <h4>Sport</h4> </a>
-									</li>
+
+									<% end %>
 								</ul>
 								<ul>
+									<% @ensonozelders.each do |adv| %>
 									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/12.jpg" alt="img12"> <h4>Carry-Ons</h4> </a>
+										<a href="/ozelders/<%= adv.name.parameterize + '-' + adv.id.to_s %>"> 
+										<%= image_tag adv.images[0].imagefile(:small) %><br /> <h4><%= adv.name %></h4> </a>
 									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/13.jpg" alt="img13"> <h4>Duffel Bags</h4> </a>
-									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/14.jpg" alt="img14"> <h4>Laptop Bags</h4> </a>
-									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/15.jpg" alt="img15"> <h4>Briefcases</h4> </a>
-									</li>
+
+									<% end %>
 								</ul>
 								<nav>
 									<a href="#">İKİNCİ EL</a><a href="#">EV ARKADAŞI</a><a
-									href="#">EV İLANI</a><a href="#">ÖZEL DERS</a>
+									href="#">DERS NOTU</a><a href="#">ÖZEL DERS</a>
 
 								</nav>
 							</div>
