--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -279,7 +279,7 @@
 						<div class = "col-sm-offset-2 col-sm-10">
 							<div class = "checkbox">
 								<label>
-									<input type = "checkbox">
+									<input type = "checkbox" id="kullanim" value="true">
 									Kullanım koşullarını kabul ediyorum</label>
 							</div>
 						</div>
@@ -390,7 +390,9 @@
 							var aciklama = ikincielaciklamaVerify();
 							var resim = ikincielresimVerify();
 							
-							return ilanadi && fiyat && marka && aciklama && resim;
+							var kullanim = $("#ikincielform #kullanim").is(":checked");
+							
+							return ilanadi && fiyat && marka && aciklama && resim && kullanim;
 							
 						}
 					</script>
