--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -202,123 +202,35 @@
 									<h3 style="text-align: center;" class="panel-title">Popüler
 									İlanlar</h3>
 								</div>
+								
+								
 
 								<div class="panel-body">
 
 									<div class="row">
-										<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-
-											<div class="thumbnail">
-												<a href="#"> <img src="/resources/images/cat-demo.jpg"
-												alt="cat demo photo"> </img> </a>
-
-											</div>
-
-											<div class="caption">
-
-												<h4>Thumbnail label</h4>
-												<p>
-													Some sample text.
-												</p>
-
-											</div>
-
-										</div>
-
-										<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-
-											<div class="thumbnail">
-												<a href="#"> <img src="/resources/images/cat-demo.jpg"
-												alt="cat demo photo"> </img> </a>
-
-											</div>
-
-											<div class="caption">
-
-												<h4>Thumbnail label</h4>
-												<p>
-													Some sample text.
-												</p>
-
-											</div>
-
-										</div>
-
-										<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-
-											<div class="thumbnail">
-												<a href="#"> <img src="/resources/images/cat-demo.jpg"
-												alt="cat demo photo"> </img> </a>
-
-											</div>
-
-											<div class="caption">
-
-												<h4>Thumbnail label</h4>
-												<p>
-													Some sample text.
-												</p>
-
-											</div>
-
-										</div>
-
-										<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-
-											<div class="thumbnail">
-												<a href="#"> <img src="/resources/images/cat-demo.jpg"
-												alt="cat demo photo"> </img> </a>
-
-											</div>
-
-											<div class="caption">
-
-												<h4>Thumbnail label</h4>
-												<p>
-													Some sample text.
-												</p>
-
-											</div>
-
-										</div>
-
-										<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-
-											<div class="thumbnail">
-												<a href="#"> <img src="/resources/images/cat-demo.jpg"
-												alt="cat demo photo"> </img> </a>
-
-											</div>
-
-											<div class="caption">
-
-												<h4>Thumbnail label</h4>
-												<p>
-													Some sample text.
-												</p>
-
-											</div>
-
-										</div>
-
-										<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-
-											<div class="thumbnail">
-												<a href="#"> <img src="/resources/images/cat-demo.jpg"
-												alt="cat demo photo"> </img> </a>
-
-											</div>
-
-											<div class="caption">
-
-												<h4>Thumbnail label</h4>
-												<p>
-													Some sample text.
-												</p>
-
-											</div>
-
-										</div>
+										
+										<% @mostpopular.each do |advert| %>
+											<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
+		
+													<div class="thumbnail">
+														<a href="/ikinciel/<%= advert.name.parameterize + '-' + advert.id.to_s %>">  
+															<%= image_tag advert.images[0].imagefile(:small) %> </a>
+		
+													</div>
+		
+													<div class="caption">
+		
+														<h5><% if advert.name.length > 14 %>
+																<%= advert.name[0..11] %>..
+															<% else %>
+																<%= advert.name %>
+															<% end %>
+														</h5>
+		
+													</div>
+		
+												</div>
+										<% end %>
 
 									</div>
 
@@ -456,185 +368,41 @@
 									<div class="panel-body">
 
 										<div class="row">
+											
+											<% @favouriteadverts.each do |advert| %>
+											
+												<% if advert.advertable_type=='Secondhand' %>
+													<% path = '/ikinciel/' %>
+												<% elsif advert.advertable_type=='Lessonnote' %>
+													<% path = '/dersnotu/' %>
+												<% elsif advert.advertable_type=='Homemate' %>
+													<% path = '/evarkadasi/' %>
+												<% elsif advert.advertable_type=='Privatelesson' %>
+													<% path = '/ozelders/' %>
+												<% end %>
+											
+												<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
 
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
+													<div class="thumbnail">
+														<a href="<%= path %><%= advert.name.parameterize + '-' + advert.id.to_s %>">  <%= image_tag advert.images[0].imagefile(:small) %> </a>
+			
+													</div>
+	
+													<div class="caption">
+												
+												
+												
+														<h5><% if advert.name.length > 12 %>
+																<%= advert.name[0..9] %>..
+															<% else %>
+																<%= advert.name %>
+															<% end %>
+														</h5>
+			
+													</div>
+	
 												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-										</div>
-
-										<div class="row">
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-										</div>
-
-										<div class="row">
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
-
-											<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-
-												<div class="thumbnail">
-													<a href="#"> <img src="/resources/images/cat-demo.jpg"
-													alt="cat demo photo"> </img> </a>
-
-												</div>
-
-												<div class="caption">
-
-													<h4>Thumbnail label</h4>
-													<p>
-														Some sample text.
-													</p>
-
-												</div>
-
-											</div>
+											<% end %>
 
 										</div>
 									</div>
