--- a/app/views/admin/charts.html
+++ b/app/views/admin/charts.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Bootstrap Admin Template</title>
+    <title>Campus İlan Admin Paneli</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/resources/plugins/adminpanel/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     <!-- Custom CSS -->
     <link href="/resources/plugins/adminpanel/css/sb-admin.css" rel="stylesheet">
 
-    <!-- Morris Charts CSS -->
+    <!-- Morris Çizelgeler CSS -->
     <link href="/resources/plugins/adminpanel/css/plugins/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin</a>
+                <a class="navbar-brand" href="/administrator">Campus İlan Admin Paneli</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -60,7 +60,7 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
+                                        <h5 class="media-heading"><strong>Onur Demirtaş</strong>
                                         </h5>
                                         <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -75,7 +75,7 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
+                                        <h5 class="media-heading"><strong>Onur Demirtaş</strong>
                                         </h5>
                                         <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -90,7 +90,7 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
+                                        <h5 class="media-heading"><strong>Onur Demirtaş</strong>
                                         </h5>
                                         <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -99,7 +99,7 @@
                             </a>
                         </li>
                         <li class="message-footer">
-                            <a href="#">Read All New Messages</a>
+                            <a href="#">Tüm Mesajlara Bak</a>
                         </li>
                     </ul>
                 </li>
@@ -131,7 +131,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Onur Demirtaş <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
                             <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -152,24 +152,22 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li>
-                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
-                    </li>
                     <li class="active">
-                        <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
+                        <a href="/administrator"><i class="fa fa-fw fa-dashboard"></i> Kontrol Paneli</a>
                     </li>
                     <li>
-                        <a href="tables.html"><i class="fa fa-fw fa-table"></i> Tables</a>
+                        <a href="/administrator/charts"><i class="fa fa-fw fa-bar-chart-o"></i> Çizelgeler</a>
                     </li>
                     <li>
-                        <a href="forms.html"><i class="fa fa-fw fa-edit"></i> Forms</a>
+                        <a href="/administrator/tables"><i class="fa fa-fw fa-table"></i> Tablolar</a>
                     </li>
                     <li>
-                        <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
+                        <a href="/administrator/forms"><i class="fa fa-fw fa-edit"></i> Formlar</a>
                     </li>
                     <li>
-                        <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
+                        <a href="/administrator/bootstrapelements"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
                     </li>
+                   
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
@@ -182,10 +180,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
-                    <li>
-                        <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
+                        <a href="/administrator/blankpage"><i class="fa fa-fw fa-file"></i> Blank Page</a>
                     </li>
                 </ul>
             </div>
@@ -200,25 +195,25 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Charts
+                            Çizelgeler
                         </h1>
                         <ol class="breadcrumb">
                             <li>
-                                <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                                <i class="fa fa-dashboard"></i>  <a href="index.html">Yönetim Paneli</a>
                             </li>
                             <li class="active">
-                                <i class="fa fa-bar-chart-o"></i> Charts
+                                <i class="fa fa-bar-chart-o"></i> Çizelgeler
                             </li>
                         </ol>
                     </div>
                 </div>
                 <!-- /.row -->
 
-                <!-- Flot Charts -->
+                <!-- Flot Çizelgeler -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="page-header">Flot Charts</h2>
-                        <p class="lead">Flot is a pure JavaScript plotting library for jQuery, with a focus on simple usage, attractive looks and interactive features. For full usage instructions and documentation for Flot Charts, visit <a href="http://www.flotcharts.org/">http://www.flotcharts.org/</a>.</p>
+                        <h2 class="page-header">Flot Çizelgeler</h2>
+                        <p class="lead">Flot is a pure JavaScript plotting library for jQuery, with a focus on simple usage, attractive looks and interactive features. For full usage instructions and documentation for Flot Çizelgeler, visit <a href="http://www.flotÇizelgeler.org/">http://www.flotÇizelgeler.org/</a>.</p>
                     </div>
                 </div>
                 <!-- /.row -->
@@ -307,11 +302,11 @@
                 </div>
                 <!-- /.row -->
 
-                <!-- Morris Charts -->
+                <!-- Morris Çizelgeler -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="page-header">Morris Charts</h2>
-                        <p class="lead">Morris.js is a very simple API for drawing line, bar, area and donut charts. For full usage instructions and documentation for Morris.js charts, visit <a href="http://morrisjs.github.io/morris.js/">http://morrisjs.github.io/morris.js/</a>.</p>
+                        <h2 class="page-header">Morris Çizelgeler</h2>
+                        <p class="lead">Morris.js is a very simple API for drawing line, bar, area and donut Çizelgeler. For full usage instructions and documentation for Morris.js Çizelgeler, visit <a href="http://morrisjs.github.io/morris.js/">http://morrisjs.github.io/morris.js/</a>.</p>
                     </div>
                 </div>
                 <!-- /.row -->
@@ -388,12 +383,12 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="/resources/plugins/adminpanel/js/bootstrap.min.js"></script>
 
-    <!-- Morris Charts JavaScript -->
+    <!-- Morris Çizelgeler JavaScript -->
     <script src="/resources/plugins/adminpanel/js/plugins/morris/raphael.min.js"></script>
     <script src="/resources/plugins/adminpanel/js/plugins/morris/morris.min.js"></script>
     <script src="/resources/plugins/adminpanel/js/plugins/morris/morris-data.js"></script>
 
-    <!-- Flot Charts JavaScript -->
+    <!-- Flot Çizelgeler JavaScript -->
     <!--[if lte IE 8]><script src="js/excanvas.min.js"></script><![endif]-->
     <script src="/resources/plugins/adminpanel/js/plugins/flot/jquery.flot.js"></script>
     <script src="/resources/plugins/adminpanel/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
