--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -186,8 +186,8 @@
 
 						<div class="col-sm-10">
 							<%= field.select :category, [['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyon',
-                  'evdekorasyon'], ['Müzik Aletleri', 'muzikaletleri'], ['Kırtasiye', 'kirtasiye'],
-                ['Mutfak Eşyaları', 'mutfakesyalari'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
+                  'evdekorasyon'], ['Müzik Aletleri', 'muzikaletleri'], ['Elektronik', 'elektronik'], ['Kırtasiye', 'kirtasiye'],
+                ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
 
 						</div>
 					</div>
