--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -198,6 +198,10 @@
 						<div class="panel-body">
 							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/mutfakesyalari">-Mutfak Eşyaları </a>
 						</div>
+						
+						<div class="panel-body">
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/vasita">-Vasıta </a>
+						</div>
 
 						<div class="panel-body">
 							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/diger">-Diğer </a>
